# NIDS

./: Cargo.toml  README.md  build_phase.md  code_explanation_v1.txt  refactoring_log.md  test_explanation.md
config/: default.toml
src/: capture.rs  lib.rs  main.rs  parser.rs  reassembly.rs  rules.rs  rules.yaml  settings.rs  state.rs
